change title and remove ai search momentarily

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="favicon/x" href="/favicon-tvtrack.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TV Track</title>
+    <title>Peliteca</title>
   </head>
   <body>
     <div id="root"></div>
